@@ -1,6 +1,6 @@
 Package: DiffBind
 Type: Package
-Version: 1.17.2
+Version: 1.17.3
 Title: Differential Binding Analysis of ChIP-Seq peak data
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gord Brown
         <gdbzork@gmail.com>
@@ -12,7 +12,7 @@ License: Artistic-2.0
 LazyLoad: yes
 Depends: R (>= 3.2.2), GenomicRanges, SummarizedExperiment, limma,
         GenomicAlignments, locfit
-Imports: RColorBrewer, amap, edgeR, gplots, grDevices,
+Imports: RColorBrewer, amap, edgeR, gplots, grDevices, graphics,
         stats, utils, IRanges, zlibbioc, lattice, systemPipeR, tools, Rcpp
 Suggests: DESeq, Rsamtools, DESeq2, BiocStyle, testthat
 Enhances: rgl, parallel, BiocParallel, XLConnect
