@@ -1,8 +1,8 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
-mergePeaks <- function(data, vMaxGap) {
-    .Call('DiffBind_mergePeaks', PACKAGE = 'DiffBind', data, vMaxGap)
+mergePeaks <- function(data, maxGap) {
+    .Call('DiffBind_mergePeaks', PACKAGE = 'DiffBind', data, maxGap)
 }
 
 mergeScores <- function(sMerged, sScore, sPeaks) {
