@@ -21,7 +21,7 @@ test_that("basic sanity of sorting",{
 
 test_that("sort large set of peaks",{
   chromNames = seq(1,95)
-  n <- 10000
+  n <- 1000
   chroms <- sample(chromNames,n,replace=TRUE)
   starts <- sample.int(200000,n,replace=TRUE)
   widths <- sample.int(1000,n,replace=TRUE)
@@ -46,4 +46,31 @@ test_that("sort equal left endpoints",{
   y = cpp_peakOrder(x)
   z = c(3,1,4,2,5)
   expect_equal(y,z)
+})
+
+test_that("sort non-numeric chromosomes",{
+  x = data.frame(c("chr1","chr2","chr1","chr2","chr3"),c(9,9,9,9,9),c(3,8,1,7,9))
+  y = cpp_peakOrder(x)
+  z = c(3,1,4,2,5)
+  expect_equal(y,z)
+})
+
+test_that("test incomplete data",{
+  x = data.frame(c(6,6,6,6,6),c(9,9,9,9,9))
+  expect_error(cpp_peakOrder(x),"undefined columns selected")
+})
+
+test_that("test no data",{
+  x = data.frame()
+  expect_error(cpp_peakOrder(x),"undefined columns selected")
+})
+
+test_that("test no data",{
+  x = NA
+  expect_error(cpp_peakOrder(x),"incorrect number of dimensions")
+})
+
+test_that("test no data",{
+  x = NA
+  expect_error(cpp_peakOrder(x),"incorrect number of dimensions")
 })
